--- a/PyOAE_example_DICbio.ipynb
+++ b/PyOAE_example_DICbio.ipynb
@@ -6,7 +6,7 @@
    "id": "6c48a292-f19a-4293-b7c3-5148d17c7742",
    "metadata": {},
    "source": [
-    "# Example calculation of the biological compoment of DIC in the global oceans\n",
+    "# Example calculation of the biological component of DIC in the global oceans\n",
     "\n",
     "by Greg Pelletier, 15-Feb-2025\n",
     "\n",
